--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kdoobq3732/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kdoobq3732/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kdoobq3732/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】川普：勿忘病毒来自中国</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/464745-600x400.jpg" />
-<h6>美国总统川普可说是近40年来对中共立场最强硬的总统。（ Joe Raedle/Getty Images）
+<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】美南部州经济复苏快</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/000_1TK543-600x400.jpg" />
+<h6>今年夏天，当美国南部各地病例激增时，该地区似乎注定要遭受东北部在春季遭受的同样经济挫折。但是到了夏末，南方的经济在很大程度上不受感染浪潮影响。8月失业率已降至6.9%。图为佛州。(Eva Marie UZCATEGUI/AFP)
 </h6>
 <hr>
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
-<strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
+<p><strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
 <strong><ahref="#_Toc2020101906">南非卫生部长病毒测试呈阳性</a></strong><br />
+<strong><ahref="#_Toc2020101905">加拿大安省单日病例显着下降</a></strong><br />
 <strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong><br />
 <strong><ahref="#_Toc2020101903">疫情导致加拿大人口增长停滞</a></strong><br />
 <strong><ahref="#_Toc2020101902">瘟疫大流行冲击供应链 多国开始屯粮</a></strong><br />
@@ -25,16 +25,6 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
-<p><a name="_Toc2020101909"></a></p>
-<h3>川普：不会忘记病毒来自中国</h3>
-<p>周六（10月17日），美国总统川普参加了密西根州和威斯康星州的竞选集会，再次提到不会忘记病毒来自中国。</p>
-<p>川普说：“在这个国家团结在一起的时候，然后中国病毒（China Virus）传进来了。”他还说是成功将美国人团结在一起。</p>
-<p>总统说，美国已经挽救了数百万人的生命，但假新闻从未这样报导。</p>
-<p>“我们遭受了来自中国的可怕灾难，我们不会忘记它（病毒）来自中国。”川普说。</p>
-<p>他再次表示，美国与中国签署了一项令人难以置信的协议，墨水还没有干，然后瘟疫就发生了。</p>
-<p>川普承诺说，如果再次当选总统，他将使美国成为制造业超级大国，“一劳永逸地结束对中国的依赖”。</p>
-<p>他表示，除了他之外，没有政府对中国（中共）采取最严厉的行动，且如果拜登获胜，中共将拥有美国。</p>
-<figure id="attachment_12483626" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416.jpg"><img class="size-large wp-image-12483626" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），美国总统川普在密歇根州MUSKEGON发表演讲。（Rey Del Rio/Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101908"></a></p>
 <h3>美国南部州经济复苏快</h3>
 <p>今年夏天，当美国南部各地病例激增时，该地区似乎注定要遭遇东北部在春季遭受的同样经济挫折。但是到了夏末，南方的经济在很大程度上不受感染浪潮影响。8月失业率已降至6.9%。</p>
@@ -132,7 +122,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -159,6 +149,6 @@
 <li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】川普：勿忘病毒来自中国</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】美南部州经济复苏快</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
